# iet

misc/obj_loader/src/: CMakeLists.txt
misc/obj_loader/src/jfAlgebra/: jfPoint3.cpp  jfPoint3.hpp  jfVector3.cpp  jfVector3.hpp
misc/obj_loader/src/jfLog/: jfLogger.hpp
misc/obj_loader/src/jfModel/: jfFace.cpp  jfFace.hpp  jfModel.cpp  jfModelDrawer.cpp  jfModelDrawer.hpp  jfNormal.cpp  jfObjLoader.cpp  jfVertex.cpp  jfVertex.hpp  jfVertexTexture.hpp
misc/obj_loader/src/jfModel_demo/: main.cpp
misc/obj_loader/src/jfRenderingLab3_demo/: Camera.cpp  Camera.h  OpenGlApp.cpp  Vector3D.cpp  textureTGA.h
misc/obj_loader/src/jfRenderingLab4_demo/: .OpenGlApp.cpp.swp  OpenGlApp.cpp  TODO  Vector3D.h  textureTGA.cpp  textureTGA.h
misc/obj_loader/src/jfwm/: CMakeLists.txt  jfSDLWindowManager.cpp  jfSDLWindowManager.hpp  jfWindow.cpp  jfWindow.hpp  jfWindowManager.hpp
physics/: CMakeLists.txt  TODO
physics/lib/dynamx/: CMakeLists.txt
physics/old/: TODO
physics/old/media/tex/: particle_texture.tga
physics/old/src/: CMakeLists.txt
physics/old/src/collision_detection_2/: RigidBodyMotionSimulation.hpp
physics/old/src/collision_detection_3/: RigidBodyMotionSimulation.cpp  RigidBodyMotionSimulation.cpp.bak  RigidBodyMotionSimulation.hpp  RigidBodyMotionSimulation.hpp.bak  main.cpp
physics/old/src/collision_detection_4/: RigidBodyMotionSimulation.cpp  RigidBodyMotionSimulation.hpp  main.cpp
physics/old/src/common/: CMakeLists.txt  Camera.cpp  Camera.hpp  Colour.hpp  FpsTimer.cpp  Simulation.cpp  TextureLoader.cpp  TextureLoader.hpp  WindowManager.cpp  WindowManager.hpp  tga.h
physics/old/src/dynamx/: AABB.cpp  AABB.hpp  AABBSweepAndPruneElem.cpp  AABBSweepAndPruneElem.hpp  CollisionData.hpp  CollisionDetector.cpp  CollisionDetector.hpp  CollisionPair.hpp  CollisionPlane.cpp  CollisionPlane.hpp  Contact.hpp  Core.hpp  CoreTypes.hpp  Edge.cpp  Edge.hpp  Face.hpp  IParticleForceGenerator.hpp  Matrix3.hpp  Matrix4.cpp  Matrix4.hpp  ObjLoader.cpp  ObjLoader.hpp  OdeSolver.cpp  Particle.cpp  ParticleAttractionForceGenerator.cpp  ParticleAttractionForceGenerator.hpp  ParticleDragForceGenerator.cpp  ParticleDragForceGenerator.hpp  ParticleForceRegistration.hpp  ParticleForceRegistry.cpp  ParticleForceRegistry.hpp  ParticleGravityForceGenerator.hpp  Plane.hpp  Point3.cpp  Point3.hpp  Quaternion.hpp  RigidBody.hpp  SweepAndPruneCollisionDetector.hpp  SweepAndPruneListElem.cpp  SweepAndPruneListElem.hpp  (+8 more)
physics/old/src/obj_test/: ObjTestSimulation.cpp  ObjTestSimulation.hpp  main.cpp
physics/old/src/particle/: ParticleSimulation.hpp
physics/old/src/response_0/: RigidBodyMotionSimulation.cpp  RigidBodyMotionSimulation.hpp
physics/old/src/rigid_body_motion/: RigidBodyMotionSimulation.hpp  main.cpp
physics/old/src/sweep_and_prune/: RigidBodyMotionSimulation.cpp  RigidBodyMotionSimulation.hpp
physics/old/src/test/: ObjLoaderTest.cpp  (+5 more)
physics/project/writeup/: .sconsign.dblite  SConstruct  acmtog.bst  background.tex  background.tex~  conclusion.tex  implementation.tex  implementation.tex~  intro.tex  intro.tex~  main.bib  main.bib~  main.dvi  main.tex  main.tex~
physics/sim/collision_detection/: RigidBodyMotionSimulation.cpp  RigidBodyMotionSimulation.hpp
physics/sim/collision_detection_2/: RigidBodyMotionSimulation.cpp  RigidBodyMotionSimulation.hpp  main.cpp
physics/sim/collision_detection_3/: RigidBodyMotionSimulation.cpp  RigidBodyMotionSimulation.cpp.bak  RigidBodyMotionSimulation.hpp
physics/sim/collision_detection_4/: RigidBodyMotionSimulation.cpp  RigidBodyMotionSimulation.hpp
physics/sim/common/: CMakeLists.txt  Camera.hpp  Simulation.cpp  Simulation.hpp  TextureLoader.cpp  TextureLoader.hpp  WindowManager.hpp  tga.h
physics/sim/obj_test/: ObjTestSimulation.cpp  ObjTestSimulation.hpp  main.cpp
physics/sim/particle/: ParticleSimulation.cpp  ParticleSimulation.hpp  main.cpp
physics/sim/rigid_body_motion/: RigidBodyMotionSimulation.cpp
physics/sim/rigid_body_motion_2/: RigidBodyMotionSimulation.cpp  main.cpp
physics/sim/sweep_and_prune/: RigidBodyMotionSimulation.cpp  RigidBodyMotionSimulation.hpp
physics/src/: CMakeLists.txt
physics/src/collision_detection/: RigidBodyMotionSimulation.cpp  RigidBodyMotionSimulation.hpp
physics/src/collision_detection_2/: RigidBodyMotionSimulation.cpp  RigidBodyMotionSimulation.hpp
physics/src/collision_detection_3/: RigidBodyMotionSimulation.cpp  RigidBodyMotionSimulation.cpp.bak  RigidBodyMotionSimulation.hpp  main.cpp
physics/src/collision_detection_4/: RigidBodyMotionSimulation.cpp  RigidBodyMotionSimulation.hpp
physics/src/common/: Camera.cpp  Colour.hpp  FpsTimer.cpp  FpsTimer.hpp  Math.hpp  WindowManager.cpp  tga.cpp
physics/src/dynamx/: AABB.hpp  AABBSweepAndPruneElem.cpp  CMakeLists.txt  CollisionDetector.cpp  CollisionDetector.hpp  CollisionPlane.cpp  CollisionPlane.hpp  Contact.cpp  Contact.hpp  ContactResolver.cpp  ContactResolver.hpp  CoreTypes.hpp  Edge.cpp  Edge.hpp  Face.cpp  IParticleForceGenerator.hpp  Matrix3.cpp  Matrix3.hpp  ObjLoader.hpp  OdeSolver.cpp  OdeSolver.hpp  Particle.hpp  ParticleAttractionForceGenerator.cpp  ParticleAttractionForceGenerator.hpp  ParticleDragForceGenerator.cpp  ParticleForceRegistry.hpp  ParticleGravityForceGenerator.cpp  Plane.cpp  Point3.cpp  Point3.hpp  Quaternion.cpp  Quaternion.hpp  RigidBody.cpp  RigidBody.hpp  RigidBodyGeometry.cpp  RigidBodyGeometry.hpp  SweepAndPruneCollisionDetector.cpp  SweepAndPruneListElem.hpp  Triangle.cpp  Vector3.cpp  (+4 more)
physics/src/obj_test/: ObjTestSimulation.cpp
physics/src/particle/: ParticleSimulation.cpp  main.cpp
physics/src/response_0/: RigidBodyMotionSimulation.cpp  RigidBodyMotionSimulation.hpp
physics/src/rigid_body_motion/: RigidBodyMotionSimulation.cpp  RigidBodyMotionSimulation.hpp
physics/src/rigid_body_motion_2/: RigidBodyMotionSimulation.cpp
physics/src/sweep_and_prune/: RigidBodyMotionSimulation.cpp
physics/src/test/: ObjLoaderTest.cpp  RigidBodyTest.cpp  TestCommon.hpp  Vector3Test.cpp
rendering/lab3/src/: CMakeLists.txt  OpenGlApp.cpp  textureTGA.cpp
rendering/project/src/: CMakeLists.txt
(+280 files in other folders)
